syntax = "proto3";

package resources.permissions;

import "buf/validate/validate.proto";
import "resources/timestamp/timestamp.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/permissions;permissions";

enum AttributeType {
  ATTRIBUTE_TYPE_UNSPECIFIED = 0;
  ATTRIBUTE_TYPE_STRING_LIST = 1;
  ATTRIBUTE_TYPE_JOB_LIST = 2;
  ATTRIBUTE_TYPE_JOB_GRADE_LIST = 3;
}

message RoleAttribute {
  int64 role_id = 1;
  optional resources.timestamp.Timestamp created_at = 2;
  int64 attr_id = 3;
  int64 permission_id = 4;
  string category = 5 [(buf.validate.field).string.max_len = 128];
  string name = 6 [(buf.validate.field).string.max_len = 255];
  string key = 7 [(buf.validate.field).string.max_len = 255];
  string type = 8 [(buf.validate.field).string.max_len = 255];
  AttributeValues valid_values = 9;
  AttributeValues value = 10;
  optional AttributeValues max_values = 11;
}

// @dbscanner: json
message AttributeValues {
  oneof valid_values {
    option (buf.validate.oneof).required = true;

    StringList string_list = 1;
    StringList job_list = 2;
    JobGradeList job_grade_list = 3;
  }
}

message StringList {
  // @sanitize: method=StripTags
  repeated string strings = 1;
}

message JobGradeList {
  bool fine_grained = 2;
  map<string, int32> jobs = 1;
  map<string, JobGrades> grades = 3;
}

message JobGrades {
  repeated int32 grades = 1;
}
